k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprofile-deployment
  labels:
    app: vprofile
spec:
  replicas: 3  # Number of instances
  selector:
    matchLabels:
      app: vprofile
  template:
    metadata:
      labels:
        app: vprofile
    spec:
      containers:
        - name: vprofile
          image: cdivyaanshu/vprofile:latest  # Replace with your DockerHub image
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
